setting up navbar... and managing the combobox to show all stores owned the the current logged in user and current store user is on.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "clsx",
         "hookform",
+        "lucide",
         "nextjs",
         "prismadb",
         "trpc",
