Billboards Entity: creating the billboard dashboard page, then an organizational folder [billboardId] for billboardForm to handle creating billboards, changing billboard name and deleting current existing billboard. Cloudinary added! And finished setting up APIs and there calls for Billboards.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,14 @@
 {
     "cSpell.words": [
+        "bbriubsn",
+        "cloudinary",
         "clsx",
         "hookform",
         "lucide",
         "nextjs",
         "prismadb",
         "textmap",
+        "toastmessage",
         "trpc",
         "zustand"
     ]
