--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "lucide",
         "nextjs",
         "prismadb",
+        "tanstack",
         "textmap",
         "toastmessage",
         "trpc",
