--- a/package.json
+++ b/package.json
@@ -31,15 +31,17 @@
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
+    "eslint-config-next": "^13.5.1",
     "lucide-react": "^0.263.1",
-    "next": "13.4.12",
+    "next": "^13.5.1",
     "next-cloudinary": "^4.18.0",
     "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
+    "react-spinners": "^0.13.8",
+    "stripe": "^13.6.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
